# flare-ai-consensus

./: .env.dummy  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_and_deploy.yml
data/: chat_response.json  final_consensus.json  free_models.json  free_working_chat_models.json  models.json  response.json
src/: README.md  config.py  input.json  main.py  prompt.txt  selected_models.json
src/consensus/: aggregator.py  async_consensus.py  config.py  consensus.py
src/data/: chat_response.json  final_consensus.json  models.json  response.json
src/flare_ai_consensus/: config.py  input.json  main.py  settings.py
src/flare_ai_consensus/api/routes/: chat.py
src/flare_ai_consensus/consensus/: __init__.py  aggregator.py  config.py  consensus.py
src/flare_ai_consensus/router/: __init__.py  async_requests.py  base_client.py  base_router.py  client.py  requests.py
src/flare_ai_consensus/utils/: loader.py  openrouter.py  parser.py  saver.py
src/router/: async_base_client.py  async_client.py  async_requests.py  base_client.py  client.py  requests.py
src/utils/: loader.py  openrouter.py  saving.py
tests/: chat_completion.py  completion.py  completion_request.py  credits.py  model_endpoints.py  models.py  working_models.py
